platform/kyverno/policies/best-practices/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
  annotations:
    policies.kyverno.io/title: Require Labels
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: low
    policies.kyverno.io/subject: Pod, Deployment, StatefulSet
    policies.kyverno.io/description: >-
      Define and use labels that identify semantic attributes of your application.
      This policy validates that required labels are present on Pods and Deployments.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: check-for-labels
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
              namespaces:
                - "team-*"
                - backstage
                - argo
                - argocd
      validate:
        message: "Required labels: app.kubernetes.io/name, app.kubernetes.io/component"
        pattern:
          metadata:
            labels:
              app.kubernetes.io/name: "?*"
              app.kubernetes.io/component: "?*"
